# ncbi_cog_classifier

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cog_classifier/: __init__.py  __main__.py  classifier.py  database.py  parser.py  reporter.py  utils.py
examples/: sample_proteins.fasta  usage_example.py
